tests/tests/ui/create_scoped_not_scope.stderr
error[E0277]: the trait bound `i64: toasty::schema::Scope` is not satisfied
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ the trait `toasty::schema::Scope` is not implemented for `i64`
   |
help: the trait `toasty::schema::Scope` is implemented for `toasty::HasMany<T>`
  --> $WORKSPACE/crates/toasty/src/schema/has_many.rs
   |
   | impl<T: Relation> Scope for HasMany<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__force_check`
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ required by this bound in `__force_check`

error[E0599]: no method named `create` found for type `i64` in the current scope
  --> tests/ui/create_scoped_not_scope.rs:11:32
   |
11 |     let _ = toasty::create!(in 42_i64 { name: "Carl" });
   |                                ^^^^^^ method not found in `i64`
